# rbkairos_etf_services

./: CMakeLists.txt  README.md  output.txt  package.xml  setup.py
launch/: bringup_actions.launch
problem_data/: README.txt  actions.json  domain.rddl  fruit_collection_domain.rddl  fruit_collection_inst.rddl  instance.rddl
scripts/: action_manager.py  evaluator.py  move_moveit_fr3.py  service_caller.py  sim_interface.py
scripts/test/: evaluator_script.py  generate_env.py  service_caller_GPT.py  sim_interface_GPT.py  test_planner_output.py
scripts/utils/: gen_actions_template.py
src/: service_caller.py  sim_interface.py
src/rbkairos/: move_moveit_fr3.py  move_rbkairos.py  pick_fr3.py
src/rbkairos_etf_services/: evaluator.py
srv/: ActionServer.srv  MoveArm.srv  MoveBase.srv  Pick.srv
